--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/UI-MVC.csproj
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/UI-MVC.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BL\BL.csproj" />
+      <ProjectReference Include="..\Resources\Resources.csproj" />
     </ItemGroup>
 
 </Project>
